WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174772
REGRESSION(
r216944
): Fallback fonts are erroneously visible when the primary font is loading
https://bugs.webkit.org/show_bug.cgi?id=174772
Summary
REGRESSION(r216944): Fallback fonts are erroneously visible when the primary ...
Myles C. Maxfield
Reported
2017-07-23 21:46:43 PDT
Fallback fonts aren't invisible when the primary font is loading
Attachments
WIP
(4.69 KB, patch)
2017-07-23 21:47 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(10.03 KB, patch)
2017-07-27 11:29 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(10.05 KB, patch)
2017-07-27 11:31 PDT
,
Myles C. Maxfield
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2017-07-23 21:47:35 PDT
Created
attachment 316264
[details]
WIP
Myles C. Maxfield
Comment 2
2017-07-27 11:29:34 PDT
Created
attachment 316557
[details]
Patch
Myles C. Maxfield
Comment 3
2017-07-27 11:31:35 PDT
Created
attachment 316559
[details]
Patch
Myles C. Maxfield
Comment 4
2017-07-27 14:25:04 PDT
<
rdar://problem/33267643
>
Myles C. Maxfield
Comment 5
2017-07-27 14:25:19 PDT
Comment on
attachment 316559
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=316559&action=review
> Source/WebCore/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=174772
<
rdar://problem/33267643
>
> LayoutTests/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=174772
<
rdar://problem/33267643
>
Simon Fraser (smfr)
Comment 6
2017-07-27 15:41:23 PDT
Comment on
attachment 316559
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=316559&action=review
> Source/WebCore/ChangeLog:3 > + REGRESSION(
r216944
): Fallback fonts aren't invisible when the primary font is loading
The double negation makes this a little hard to follow. Maybe "Fallback fonts are visible, but should not be, when the primary font is loading"
Myles C. Maxfield
Comment 7
2017-07-28 10:06:34 PDT
Committed
r220003
: <
http://trac.webkit.org/changeset/220003
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug