Source/WebCore/platform/graphics/FontCascadeFonts.cpp
@@ -375,7 +375,7 @@ GlyphData FontCascadeFonts::glyphDataForSystemFallback(UChar32 character, const 
     return fallbackGlyphData;
 }
 
-enum class SystemFallbackVisibility {
+enum class FallbackVisibility {
     Immaterial,
     Visible,
     Invisible
@@ -383,7 +383,7 @@ enum class SystemFallbackVisibility {
 
 GlyphData FontCascadeFonts::glyphDataForVariant(UChar32 character, const FontCascadeDescription& description, FontVariant variant, unsigned fallbackIndex)
 {
-    SystemFallbackVisibility systemFallbackVisibility = SystemFallbackVisibility::Immaterial;
+    FallbackVisibility fallbackVisibility = FallbackVisibility::Immaterial;
     ExternalResourceDownloadPolicy policy = ExternalResourceDownloadPolicy::Allow;
     GlyphData loadingResult;
     for (; ; ++fallbackIndex) {
@@ -397,12 +397,15 @@ GlyphData FontCascadeFonts::glyphDataForVariant(UChar32 character, const FontCas
 
         if (data.font->isInterstitial()) {
             policy = ExternalResourceDownloadPolicy::Forbid;
-            if (systemFallbackVisibility == SystemFallbackVisibility::Immaterial)
-                systemFallbackVisibility = data.font->visibility() == Font::Visibility::Visible ? SystemFallbackVisibility::Visible : SystemFallbackVisibility::Invisible;
+            if (fallbackVisibility == FallbackVisibility::Immaterial)
+                fallbackVisibility = data.font->visibility() == Font::Visibility::Visible ? FallbackVisibility::Visible : FallbackVisibility::Invisible;
             if (!loadingResult.font && data.glyph)
                 loadingResult = data;
             continue;
         }
+
+        if (fallbackVisibility == FallbackVisibility::Invisible && data.font->visibility() == Font::Visibility::Visible)
+            data.font = &data.font->invisibleFont();
 
         if (variant == NormalVariant) {
             if (data.font->platformData().orientation() == Vertical && !data.font->isTextOrientationFallback()) {
@@ -427,7 +430,7 @@ GlyphData FontCascadeFonts::glyphDataForVariant(UChar32 character, const FontCas
 
     if (loadingResult.font)
         return loadingResult;
-    return glyphDataForSystemFallback(character, description, variant, systemFallbackVisibility == SystemFallbackVisibility::Invisible);
+    return glyphDataForSystemFallback(character, description, variant, fallbackVisibility == FallbackVisibility::Invisible);
 }
 
 static RefPtr<GlyphPage> glyphPageFromFontRanges(unsigned pageNumber, const FontRanges& fontRanges)
@@ -436,6 +439,7 @@ static RefPtr<GlyphPage> glyphPageFromFontRanges(unsigned pageNumber, const Font
     UChar32 pageRangeFrom = pageNumber * GlyphPage::size;
     UChar32 pageRangeTo = pageRangeFrom + GlyphPage::size - 1;
     auto policy = ExternalResourceDownloadPolicy::Allow;
+    FallbackVisibility desiredVisibility = FallbackVisibility::Immaterial;
     for (unsigned i = 0; i < fontRanges.size(); ++i) {
         auto& range = fontRanges.rangeAt(i);
         if (range.from() <= pageRangeFrom && pageRangeTo <= range.to()) {
@@ -443,6 +447,15 @@ static RefPtr<GlyphPage> glyphPageFromFontRanges(unsigned pageNumber, const Font
             if (!font)
                 continue;
             if (font->isInterstitial()) {
+                if (desiredVisibility == FallbackVisibility::Immaterial) {
+                    auto fontVisibility = font->visibility();
+                    if (fontVisibility == Font::Visibility::Visible)
+                        desiredVisibility = FallbackVisibility::Visible;
+                    else {
+                        ASSERT(fontVisibility == Font::Visibility::Invisible);
+                        desiredVisibility = FallbackVisibility::Invisible;
+                    }
+                }
                 font = nullptr;
                 policy = ExternalResourceDownloadPolicy::Forbid;
                 continue;
@@ -453,6 +466,8 @@ static RefPtr<GlyphPage> glyphPageFromFontRanges(unsigned pageNumber, const Font
     if (!font || font->platformData().orientation() == Vertical)
         return nullptr;
 
+    if (desiredVisibility == FallbackVisibility::Invisible && font->visibility() == Font::Visibility::Visible)
+        return const_cast<GlyphPage*>(font->invisibleFont().glyphPage(pageNumber));
     return const_cast<GlyphPage*>(font->glyphPage(pageNumber));
 }
 
